add applications view